<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_detailed_weather"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="kishore.mad.com.weatherapp.DetailedWeatherActivity">

    <LinearLayout
        android:id="@+id/linLayDetail1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_location"
            android:textSize="15sp"

            />

        <TextView
            android:id="@+id/tvDetailCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:background="#757575" />

    <ImageView
        android:id="@+id/ivDetailImage"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:scaleType="fitXY" />

    <TextView
        android:id="@+id/tvDetailTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Temp "
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvDetailCloudy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="Temp "
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/linLayDetail2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/max_temperature"
            android:textAlignment="textEnd"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvDetailMaxTemp"
            android:layout_weight="1"
            android:text="temp"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayDetail3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/min_temperature"
            android:textAlignment="textEnd"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDetailMinTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:text="temp"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="2dp"
        android:layout_marginBottom="25dp"
        android:background="#757575" />

    <LinearLayout
        android:id="@+id/linLayDetail4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"

            android:text="@string/feels_like"
            android:textAlignment="textStart"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDetailFeelsLike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="temp"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayDetail5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"

            android:text="@string/humidity"
            android:textAlignment="textStart"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDetailHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="temp"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayDetail6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"

            android:text="@string/dewpoint"
            android:textAlignment="textStart"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDetailDewpoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="temp"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayDetail7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"

            android:text="@string/pressure"
            android:textAlignment="textStart"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDetailPressure"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="temp"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayDetail8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"

            android:text="@string/clouds"
            android:textAlignment="textStart"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDetailClouds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="temp"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linLayDetail9"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="90dp"

            android:text="@string/winds"
            android:textAlignment="textStart"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvDetailWinds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:text="temp"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

</LinearLayout>
